--- a/main.css
+++ b/main.css
@@ -26,10 +26,18 @@ header {
   background-image: linear-gradient(90deg, #1f4e5f, #274156);
 }
 
-h1 {
+h1 a {
   font-family: "DM Sans", sans-serif;
   color: #ebebeb;
   text-transform: uppercase;
+  text-decoration: none;
+}
+
+h1:hover,
+a:hover {
+  transform: scale(1.1);
+  font-weight: bold;
+  transition: 0.1s ease-out;
 }
 
 nav {
